0.5.2, added water flow multiplier setting, changed metadata loader to use resource location instead of string location. fixed native physics blocks passing through terrain. fixed assigning pooled blockpos to list.